# projectxx_template

./: .gitignore  README.md
net-utils/: CMakeLists.txt  README.md
net-utils/.devcontainer/: devcontaier.json
net-utils/source/: main.cpp  net_util.cpp
net-utils/source/protocol/: protocol.hpp
net-utils/tests/: CMakeLists.txt
net-utils/tests/api/: NetMainApiTest.cpp
net-utils/tests/unit/: NetApiTest.cpp
